# guardrail-proxy-llm

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml  run.py
docs/: Demo.md  architecture.md  model-report.md  rca.md
src/guardrail_proxy/: __init__.py  main.py
src/guardrail_proxy/api/: __init__.py  auth.py  dependencies.py  logging_middleware.py  metrics.py  ratelimit.py  routes.py
src/guardrail_proxy/config/: __init__.py  settings.py
src/guardrail_proxy/core/: __init__.py  analyzer.py  classifier.py  pii.py  service.py
src/guardrail_proxy/integrations/: __init__.py  downstream.py  langchain_guardrail.py
src/guardrail_proxy/models/: __init__.py  contracts.py
src/guardrail_proxy/static/: index.html
src/guardrail_proxy/storage/: __init__.py  cache.py  database.py  entities.py  quarantine.py
src/guardrail_proxy/training/: __init__.py  train_distilbert.py
tests/: test_analyzer.py  test_api.py  test_integration.py  test_langchain_guardrail.py  test_logging.py  test_model.py  test_pii.py  test_production.py
tests/fixtures/: training_data.jsonl
