[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardrail-proxy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = []
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.29.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.2.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "psycopg[binary]>=3.1.0,<4.0.0",
  "redis>=5.0.0,<8.0.0",
  "langchain>=0.3.0,<0.4.0",
  "langchain-core>=0.3.0,<0.4.0",
  "transformers>=4.38.0,<5.0.0",
  "torch>=2.2.0,<2.3.0",
  "datasets>=2.18.0,<4.0.0",
  "scikit-learn>=1.4.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=5.0.0,<7.0.0",
  "ruff>=0.4.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: requires live Docker services (Postgres:5442, Redis:6389)",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
